# Basic-Http-Server-cpp

./: CMakeLists.txt  README.md  dictionary.txt  html_parser.cpp  html_parser.h  main.cpp  main.html  makefile  server
